# bolt

./: .gitignore  Cargo.toml  README.md  bolt.pyi
.cargo/: config.toml
benchmarks/: Cargo.toml  README.md
benchmarks/src/: c_quadtree.rs  main.rs
collisions/: Cargo.toml
collisions/src/: lib.rs
collisions/tests/: test.rs
common/: Cargo.toml
common/src/: shapes.rs
common/tests/: test.rs
netcode/: Cargo.toml
netcode/src/: lib.rs
python/: Cargo.toml
python/src/: collisions.rs  lib.rs  netcode.rs  quadtree.rs  serialization.rs
quadtree/: Cargo.toml
quadtree/benches/: benchmarks.rs  comprehensive_benchmark.rs
quadtree/src/: collision_detection.rs  error.rs  lib.rs  object_pool.rs  quadtree.rs  shapes.rs
quadtree/src/quadtree/: api.rs  collision_pairs.rs  collisions.rs  config.rs  core.rs  extents.rs  maintenance.rs  mod.rs  normalize.rs  query_circle.rs  query_leaf.rs  query_rect.rs  rebuild_nodes.rs  rebuild_storage.rs  rebuild_storage_reorder.rs  storage.rs  types.rs  update_entities.rs
quadtree/src/quadtree/query_leaf/: circle.rs  helpers.rs  rect_contained.rs  rect_contained_no_dedupe.rs  rect_raw.rs  rect_raw_dedupe_soa.rs  rect_raw_no_dedupe.rs
quadtree/tests/: test.rs
serialization/: Cargo.toml  build.py  build.rs
serialization/src/: lib.rs
serialization/tests/: test.rs
src/: lib.rs  object_pool.rs  pool.rs  quadtree.rs  shapes.rs  test.rs
tests/: test.rs
