[package]
name = "benchmarks"
version = "0.1.0"
edition = "2024"

[dependencies]
bolt_quadtree = { version = "0.1.0", package = "bolt-quadtree" }
quadtree_crate = { package = "quadtree", version = "0.5.0" }
quadtree_f32 = { package = "quadtree-f32", version = "0.5.0" }
quadtree_rs = { package = "quadtree_rs", version = "0.1.3" }
rand = "0.8"
spatialtree = "0.1.3"

[features]
query_stats = ["bolt_quadtree/query_stats"]
