[package]
name = "bolt"
version = "0.1.0"
edition = "2021"

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
parry2d = "0.17.0"
rand = "0.8.5"
smallvec = "1.10.0"

collisions = { path = "../collisions" }
common = { path = "../common" }
quadtree = { path = "../quadtree" }
serialization = { path = "../serialization" }
netcode = { path = "../netcode" }
[lib]
crate-type = ["cdylib"]
