[package]
name = "quadtree"
version = "0.2.0"
authors = ["Steve Mostovoy <stevemostovoysm@gmail.com>"]
edition = "2021"

[lib]
name = "quadtree"

[dependencies]
common = { path = "../common" }
fxhash = "0.2"
smallvec = "1"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"

[features]
query_stats = []

[[bench]]
name = "benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmark"
harness = false
